test/syc/bad/confldeclvar.c
/*
 * Conflicting type 'long' for 'a', previously declared as 'int'.
 */

int a;
long a;
